packages/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
spec:
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
  selector:
    app: my-app
